--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,14 @@
-workspace = { members = [ "catr", "cutr","echor", "findr", "headr", "httpie", "uniqr", "wcr"] }
+workspace = { members = [
+  "catr",
+  "cutr",
+  "echor",
+  "findr",
+  "grepr",
+  "headr",
+  "httpie",
+  "uniqr",
+  "wcr",
+] }
 [package]
 name = "command-line-rust"
 version = "0.1.0"
@@ -8,4 +18,3 @@ edition = "2021"
 
 [dependencies]
 assert_cmd = "2.0.14"
-
