feat: add fortuner

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@ workspace = { members = [
   "catr", "commr",
   "cutr",
   "echor",
-  "findr",
+  "findr", "fortuner",
   "grepr",
   "headr",
   "httpie", "tailr",
